crates/ssa-cache-schema/tests/ui/fail_module_attr.stderr
error: unsupported cache_schema type attribute
 --> tests/ui/fail_module_attr.rs:4:16
  |
4 | #[cache_schema(module = "old::module")]
  |                ^^^^^^
